--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    // Add any dependencies here as needed
+    "chalk": "^5.3.0",
+    "inquirer": "^9.2.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
-    // Add any development dependencies here as needed
+    "eslint": "^8.23.0",
+    "chalk": "^5.3.0",
+    "inquirer": "^9.2.0",
+    "lodash": "^4.17.21"
   },
   "author": "Your Name",
   "license": "MIT"
