--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js"
+    "test": "jest"
   },
   "dependencies": {
     "chalk": "^5.3.0",
@@ -13,10 +13,10 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "eslint": "^8.23.0",
-    "chalk": "^5.3.0",
-    "inquirer": "^9.2.0",
-    "lodash": "^4.17.21"
+    "@babel/core": "^7.x",
+    "@babel/preset-env": "^7.x",
+    "babel-jest": "^29.x",
+    "jest": "^29.x"
   },
   "author": "Your Name",
   "license": "MIT"
